--- a/developer/permission-rbac-and-objectpermission/index.html
+++ b/developer/permission-rbac-and-objectpermission/index.html
@@ -406,15 +406,15 @@ def func():
 
 <p>从使用的角度来看，上面我们的用户和权限表已经完全够用了。</p>
 
-<p>但是：
-1. 当我们的权限特别多的时候（不只有 add, view, delete, edit, 还有很多其他权限的时候），用户的增长会给权限表带来指数级的增长。
+<p>但是：<br />
+1. 当我们的权限特别多的时候（不只有 add, view, delete, edit, 还有很多其他权限的时候），用户的增长会给权限表带来指数级的增长。<br />
 2. 很多用户的权限其实是一样的（user1 和 user2 都有同样的权限， user3 又和 user4 有相同的权限），权限表中包含了大量的冗余数据。</p>
 
-<p>这个时候，我们就很自然的想到 <code>分组</code> 这样一个概念。
-权限1 和 权限2 分为一个组 r1；
+<p>这个时候，我们就很自然的想到 <code>分组</code> 这样一个概念。<br />
+权限1 和 权限2 分为一个组 r1；<br />
 权限3 和 权限4 分为一个组 r2；</p>
 
-<p>如果用户属于 组r1 ，那么，他就拥有权限1 和 权限2
+<p>如果用户属于 组r1 ，那么，他就拥有权限1 和 权限2<br />
 如果用户属于 组r2 ，那么，他就拥有权限3 和 权限4</p>
 
 <ul>
@@ -613,7 +613,7 @@ def func():
     check_permisson(user, car, 'drive')
 </code></pre>
 
-<p>假设我们在定义 数据模型的时候， Car 有一个 name 属性，值为 car
+<p>假设我们在定义 数据模型的时候， Car 有一个 name 属性，值为 car<br />
 那我们就可以直接查数据库，判断 user 对 car 是否有 drive 权限。</p>
 
 <pre><code class="language-python">
