--- a/cloud/harbor-authenticate.md/index.html
+++ b/cloud/harbor-authenticate.md/index.html
@@ -9,12 +9,12 @@
   <meta property="og:title" content="harbor 源码分析： 用户认证" />
   <meta name="twitter:title" content="harbor 源码分析： 用户认证" />
   <meta name="description" content="接口定义 代码在 src/ui/auth/authenticator.go
-// Authenticator provides interface to authenticate user credentials. type Authenticator interface { // Authenticate ... Authenticate(m models.AuthModel) (*models.User, error) }  接口中定义了函数 Authenticate，这要对应的结构体实现了该函数，就能完成认证。
+// Authenticator provides interface to authenticate user credentials. type Authenticator interface { // Authenticate ... Authenticate(m models.AuthModel) (*models.User, error) }  接口中定义了函数 Authenticate，只要对应的结构体实现了该函数，就能完成认证。
 我们通过其中的数据库认证方式，来简单分析。
 接口实现 代码在 src/ui/auth/db/db.go
 // Auth implements Authenticator interface to authenticate user against DB. type Auth struct{} // Authenticate calls dao to authenticate user. func (d *Auth) Authenticate(m models.AuthModel) (*models.User, error) { u, err := dao.LoginByDb(m) if err != nil { return nil, err } return u, nil }  接口的注册 代码在 src/ui/auth/db/db.">
   <meta property="og:description" content="接口定义 代码在 src/ui/auth/authenticator.go
-// Authenticator provides interface to authenticate user credentials. type Authenticator interface { // Authenticate ... Authenticate(m models.AuthModel) (*models.User, error) }  接口中定义了函数 Authenticate，这要对应的结构体实现了该函数，就能完成认证。
+// Authenticator provides interface to authenticate user credentials. type Authenticator interface { // Authenticate ... Authenticate(m models.AuthModel) (*models.User, error) }  接口中定义了函数 Authenticate，只要对应的结构体实现了该函数，就能完成认证。
 我们通过其中的数据库认证方式，来简单分析。
 接口实现 代码在 src/ui/auth/db/db.go
 // Auth implements Authenticator interface to authenticate user against DB. type Auth struct{} // Authenticate calls dao to authenticate user. func (d *Auth) Authenticate(m models.AuthModel) (*models.User, error) { u, err := dao.LoginByDb(m) if err != nil { return nil, err } return u, nil }  接口的注册 代码在 src/ui/auth/db/db.">
@@ -210,7 +210,7 @@ type Authenticator interface {
 }
 </code></pre>
 
-<p>接口中定义了函数 Authenticate，这要对应的结构体实现了该函数，就能完成认证。<br />
+<p>接口中定义了函数 Authenticate，只要对应的结构体实现了该函数，就能完成认证。<br />
 我们通过其中的数据库认证方式，来简单分析。</p>
 
 <h2 id="接口实现">接口实现</h2>
