new post: harbor job

--- a/about/index.html
+++ b/about/index.html
@@ -247,6 +247,13 @@
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+      <hr />
+      <aside>
+        
+      </aside>
+      <hr />
+
       <article role="main" class="blog-post">
         <hr />
 
@@ -293,6 +300,8 @@
 激动着我把你洒落的羽毛举向阳光</p>
 
       </article>
+
+
 
       <ul class="pager blog-pager">
         
