--- a/developer/permission-rbac-and-objectpermission/index.html
+++ b/developer/permission-rbac-and-objectpermission/index.html
@@ -196,6 +196,31 @@ def func(): user = …">
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+      <hr />
+      <aside>
+        <nav id="TableOfContents">
+<ul>
+<li>
+<ul>
+<li><a href="#一-从简单权限控制到-rbac">一. 从简单权限控制到 RBAC</a>
+<ul>
+<li><a href="#1-只有一个权限">1. 只有一个权限</a></li>
+<li><a href="#2-少量权限">2. 少量权限</a></li>
+<li><a href="#3-多个权限">3. 多个权限</a></li>
+<li><a href="#4-rbac">4. RBAC</a></li>
+</ul></li>
+<li><a href="#二-objectpermission">二、ObjectPermission</a>
+<ul>
+<li><a href="#1-简单原型">1. 简单原型</a></li>
+<li><a href="#2-django-原型">2. django 原型</a></li>
+</ul></li>
+</ul></li>
+</ul>
+</nav>
+      </aside>
+      <hr />
+
       <article role="main" class="blog-post">
         
 
@@ -635,6 +660,8 @@ AND permission_name={permission_name}&quot;.format(
 <p>具体可以参考  <code>django-guardian</code></p>
 
       </article>
+
+
 
       <ul class="pager blog-pager">
         
