--- a/ops/install-docker-on-centos/index.html
+++ b/ops/install-docker-on-centos/index.html
@@ -191,6 +191,13 @@ cat &gt;/etc/yum.repos.d/docker.repo &lt;&lt;-EOF [docker-main-repo] name=Docker
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+      <hr />
+      <aside>
+        
+      </aside>
+      <hr />
+
       <article role="main" class="blog-post">
         <p>增加 docker 源</p>
 
@@ -272,6 +279,8 @@ yum remove docker-engine
 </code></pre>
 
       </article>
+
+
 
       <ul class="pager blog-pager">
         
