--- a/ops/install-docker-on-debian/index.html
+++ b/ops/install-docker-on-debian/index.html
@@ -189,6 +189,28 @@ apt install apt-transport-https  2. 更新 metadata apt …">
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+      <hr />
+      <aside>
+        <nav id="TableOfContents">
+<ul>
+<li>
+<ul>
+<li>
+<ul>
+<li><a href="#1-加入软件源">1. 加入软件源</a></li>
+<li><a href="#2-更新-metadata">2. 更新 metadata</a></li>
+<li><a href="#3-列出可选版本">3. 列出可选版本</a></li>
+<li><a href="#4-安装">4. 安装</a></li>
+<li><a href="#5-卸载">5. 卸载</a></li>
+<li><a href="#6-其它">6. 其它</a></li>
+</ul></li>
+</ul></li>
+</ul>
+</nav>
+      </aside>
+      <hr />
+
       <article role="main" class="blog-post">
         
 
@@ -311,6 +333,8 @@ debian 9    stretch
 <p>软件源需要根据系统版本进行修改。</p>
 
       </article>
+
+
 
       <ul class="pager blog-pager">
         
