--- a/ansible/ansible-template-demo/index.html
+++ b/ansible/ansible-template-demo/index.html
@@ -188,6 +188,13 @@
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+      <hr />
+      <aside>
+        
+      </aside>
+      <hr />
+
       <article role="main" class="blog-post">
         <pre><code class="language-yaml">- name: config docker service
   template: 
@@ -270,6 +277,8 @@ WantedBy=multi-user.target
 </code></pre>
 
       </article>
+
+
 
       <ul class="pager blog-pager">
         
