--- a/cloud/deploy-docker-registry-with-basic-authentication/index.html
+++ b/cloud/deploy-docker-registry-with-basic-authentication/index.html
@@ -196,6 +196,25 @@ $ mkdir auth  二、生成认证文件 $ docker run \ --entrypoint htpasswd \ re
 <div class="container" role="main">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+
+      <hr />
+      <aside>
+        <nav id="TableOfContents">
+<ul>
+<li>
+<ul>
+<li>
+<ul>
+<li><a href="#一-创建-auth-目录">一、创建 auth 目录</a></li>
+<li><a href="#二-生成认证文件">二、生成认证文件</a></li>
+<li><a href="#三-启动镜像仓库">三、启动镜像仓库</a></li>
+</ul></li>
+</ul></li>
+</ul>
+</nav>
+      </aside>
+      <hr />
+
       <article role="main" class="blog-post">
         
 
@@ -247,6 +266,8 @@ $ mkdir auth  二、生成认证文件 $ docker run \ --entrypoint htpasswd \ re
 </code></pre>
 
       </article>
+
+
 
       <ul class="pager blog-pager">
         
