--- a/cloud/deploy-k8s-with-kubeadm/index.html
+++ b/cloud/deploy-k8s-with-kubeadm/index.html
@@ -220,6 +220,7 @@ node2： 192.168.88.51
 <li><a href="#四-安装-kubeadm-kubelet-and-kubectl">四、安装 kubeadm, kubelet and kubectl</a></li>
 <li><a href="#五-运行-kubeadm">五、运行 kubeadm</a></li>
 <li><a href="#六-部署网络插件-calico">六、部署网络插件 calico</a></li>
+<li><a href="#七-对应视频">七、对应视频</a></li>
 </ul></li>
 </ul>
 </nav>
@@ -310,6 +311,10 @@ systemctl enable kubelet &amp;&amp; systemctl start kubelet
 
 <pre><code class="language-bash">kubectl apply -f https://docs.projectcalico.org/v2.6/getting-started/kubernetes/installation/hosted/kubeadm/1.6/calico.yaml
 </code></pre>
+
+<h2 id="七-对应视频">七、对应视频</h2>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_PCJPJdEIUE" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
       </article>
 
