--- a/series/index.html
+++ b/series/index.html
@@ -159,7 +159,7 @@
       
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+          <div class="">
             <div class="series-heading">
               <h1>Series</h1>
                 
