--- a/cloud/k8s-scheduler/index.html
+++ b/cloud/k8s-scheduler/index.html
@@ -254,7 +254,7 @@
 
 <p>在分析 k8s pod 调度之前，我们先来回顾一下 k8s 的架构</p>
 
-<p><img src="/static/images/kubernetes-arch.png" alt="" /></p>
+<p><img src="/static/images/15343017406612.jpg" alt="" /></p>
 
 <h1 id="二-k8s-pod-调度相关的参数">二、k8s pod 调度相关的参数</h1>
 
