update post: scheduler

--- a/cloud/k8s-scheduler/index.html
+++ b/cloud/k8s-scheduler/index.html
@@ -225,7 +225,23 @@
 </ul></li>
 </ul></li>
 <li><a href="#三-k8s-调度之节点的筛选">三、k8s 调度之节点的筛选</a></li>
-<li><a href="#四-k8s-调度之节点的排序">四、k8s 调度之节点的排序</a></li>
+<li><a href="#四-k8s-调度之节点的排序">四、k8s 调度之节点的排序</a>
+<ul>
+<li>
+<ul>
+<li>
+<ul>
+<li>
+<ul>
+<li><a href="#1-节点上可用资源越多-优先级越高-越有钱越好">1. 节点上可用资源越多，优先级越高 (越有钱越好)</a></li>
+<li><a href="#2-节点-cpu-和-memory-使用比较均衡-相对帅且有钱-而不是只帅而没有钱的">2. 节点 cpu 和 memory 使用比较均衡 (相对帅且有钱，而不是只帅而没有钱的)</a></li>
+<li><a href="#3-亲和性-比如最好是公务员">3. 亲和性 （比如最好是公务员）</a></li>
+<li><a href="#4-节点上已经存在镜像-且镜像越大越好-这样就能节约拉取镜像的时间-家里已经买了车了-越贵越好">4. 节点上已经存在镜像，且镜像越大越好，这样就能节约拉取镜像的时间 (家里已经买了车了，越贵越好)</a></li>
+<li><a href="#5-其它">5. 其它</a></li>
+</ul></li>
+</ul></li>
+</ul></li>
+</ul></li>
 <li><a href="#五-kubelet-实例化-pod-为容器">五、 kubelet 实例化 pod 为容器</a>
 <ul>
 <li>
@@ -395,12 +411,17 @@ func (nodes NodeList) Less(i, j int) bool {
 }
 </code></pre>
 
-<p>我大概总结一下：
-1. 节点上可用资源越多，优先级越高 (越有钱越好)
-2. 节点 cpu 和 memory 使用比较均衡 (相对帅且有钱，而不是只帅而没有钱的)
-3. 亲和性 （比如最好是公务员）
-4. 节点上已经存在镜像，且镜像越大越好，这样就能节约拉取镜像的时间 (家里已经买了车了，越贵越好)
-5. 其它</p>
+<p>我大概总结一下：</p>
+
+<h5 id="1-节点上可用资源越多-优先级越高-越有钱越好">1. 节点上可用资源越多，优先级越高 (越有钱越好)</h5>
+
+<h5 id="2-节点-cpu-和-memory-使用比较均衡-相对帅且有钱-而不是只帅而没有钱的">2. 节点 cpu 和 memory 使用比较均衡 (相对帅且有钱，而不是只帅而没有钱的)</h5>
+
+<h5 id="3-亲和性-比如最好是公务员">3. 亲和性 （比如最好是公务员）</h5>
+
+<h5 id="4-节点上已经存在镜像-且镜像越大越好-这样就能节约拉取镜像的时间-家里已经买了车了-越贵越好">4. 节点上已经存在镜像，且镜像越大越好，这样就能节约拉取镜像的时间 (家里已经买了车了，越贵越好)</h5>
+
+<h5 id="5-其它">5. 其它</h5>
 
 <h1 id="五-kubelet-实例化-pod-为容器">五、 kubelet 实例化 pod 为容器</h1>
 
